--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -1,70 +1,37 @@
-# # This is a basic workflow to help you get started with Actions
 
-# name: CI
 
-# # Controls when the workflow will run
-# on:
-#   # Triggers the workflow on push or pull request events but only for the "main" branch
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+name: Sync Source to Target Branch
 
-#   # Allows you to run this workflow manually from the Actions tab
-#   workflow_dispatch:
-
-# # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# jobs:
-#   # This workflow contains a single job called "build"
-#   build:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#       - uses: actions/checkout@v4
-
-#       # Runs a single command using the runners shell
-#       - name: Run a one-line script
-#         run: echo Hello, world!
-
-#       # Runs a set of commands using the runners shell
-#       - name: Run a multi-line script
-#         run: |
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
-name: Merge Clone to Test
-      
 on:
-  workflow_dispatch:
   push:
     branches:
-      - cloneprojectbranch
-           
+      - source-branch # Trigger the workflow on pushes to the source branch
+
 jobs:
-  merge-clone-to-test:
+  sync-branches:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout test branch
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          ref: test
+          # Fetch the full history to be able to merge properly
+          fetch-depth: 0 
+          # Use the GITHUB_TOKEN for authentication
+          token: ${{ secrets.GITHUB_TOKEN }} 
 
       - name: Configure Git
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
 
-      - name: Merge cloneprojectbranch into test
+      - name: Merge source into target
         run: |
-          git fetch origin cloneprojectbranch
-          git merge origin/cloneprojectbranch --no-edit
-          git push origin test
+          # Checkout the target branch
+          git checkout target-branch
+          # Pull the latest changes from the source branch
+          git pull origin source-branch
+          # Push the combined changes back to the target branch
+          git push origin target-branch
 
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
