--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -24,7 +24,12 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-
+      - name: Force Merge Unrelated Histories
+        run: |
+          git pull origin cloneprojectbranch --allow-unrelated-histories
+          # OR if you are using git merge specifically:
+          # git merge origin/cloneprojectbranch --allow-unrelated-histories
+          git push origin main # Push the combined result back up 
       - name: Merge source into target
         run: |
           # Checkout the target branch
@@ -33,5 +38,5 @@ jobs:
           git pull origin source-branch
           # Push the combined changes back to the target branch
           git push origin target-branch
-
+p
 
